# RustView

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
apps/rustview-desktop/: Cargo.toml
apps/rustview-desktop/src/: app.rs  identity.rs  main.rs  media.rs  network.rs  platform.rs  settings.rs
crates/rustview-core/: Cargo.toml
crates/rustview-core/src/: device.rs  framing.rs  invite.rs  lib.rs  protocol.rs  secure.rs  session.rs
docs/: ARCHITECTURE.md  PLATFORM_SUPPORT.md  ROADMAP.md  SECURITY.md
packaging/macos/: Info.plist
scripts/: package-linux.sh  package-macos.sh  package-windows.ps1
services/rustview-relay/: Cargo.toml
services/rustview-relay/src/: main.rs
