[workspace]
resolver = "3"
members = [
    "apps/rustview-desktop",
    "crates/rustview-core",
    "services/rustview-relay",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
authors = ["RustView contributors"]
repository = "https://github.com/ilyasakkus/RustView"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
blake2 = "0.10.6"
data-encoding = "2.11.0"
eframe = { version = "0.35.0", default-features = false, features = ["accesskit", "default_fonts", "wgpu", "x11", "wayland"] }
enigo = { version = "0.6.1", default-features = false }
getrandom = "0.4.3"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
snow = "0.10.0"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
xcap = "0.9.6"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
