[package]
name = "rustview-desktop"
description = "Cross-platform RustView remote desktop client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
eframe.workspace = true
getrandom.workspace = true
image.workspace = true
rustview-core = { path = "../../crates/rustview-core" }
tracing.workspace = true
tracing-subscriber.workspace = true
xcap.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
enigo.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
enigo = { workspace = true, features = ["x11rb"] }

[lints]
workspace = true
