[package]
name = "rustview-core"
description = "Shared secure protocol and session primitives for RustView"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
blake2.workspace = true
data-encoding.workspace = true
getrandom.workspace = true
postcard.workspace = true
serde.workspace = true
snow.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[lints]
workspace = true
