[package]
name = "rustview-relay"
description = "Blind TCP rendezvous and relay service for RustView"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
rustview-core = { path = "../../crates/rustview-core" }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

